scroll fix on mobile

--- a/styleResponsive.css
+++ b/styleResponsive.css
@@ -6,9 +6,6 @@
     translate: -30.25%;
   }
 
-  .reveal {
-    opacity: 1;
-  }
 
 }
 
