--- a/styleResponsiveProjects.css
+++ b/styleResponsiveProjects.css
@@ -15,6 +15,8 @@
     min-width: 50vh;
     min-height: auto;
   }
+
+
 }
 
 @media (min-width: 1112px) and (max-width: 1179px) {
@@ -122,6 +124,21 @@
   .grid-container, .b2t, .filterBtns, .filterBy {
       font-size: 1rem;
     }
+
+
+    .reveal{
+      position: relative;
+      transform: translateY(0px);
+      opacity: 100;
+      transition: none;
+    }
+    
+    .active{
+    transform: translateY(0px);
+    opacity: 1;
+    } 
+    
+    
 
     
 }
